virtualservices/api-example-com-vs-waf-problem-1.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com'
    routes:
    - matchers:
      - prefix: /httpbin/
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000
            namespace: gloo-system 
      options:
        prefixRewrite: /
    options:
      waf:
        customInterventionMessage: 'ModSecurity intervention! Custom message details here..'
        ruleSets:
        - ruleStr: |
            # Turn rule engine on
            SecRuleEngine On
            # Note the /0 in the CIDR that causes the issue on Envoy.
            # SecRule REMOTE_ADDR "!@ipMatch 10.244.0.0/24" "phase:1,deny,status:403,id:1,msg:'block ip'"
            SecRule REMOTE_ADDR "!@ipMatch 10.244.0.0/0" "phase:1,deny,status:403,id:1,msg:'block ip'"
